@@ -40,11 +40,12 @@ tsdecrypt_SRC = data.c \
  util.c \
  camd.c \
  camd-cs378x.c \
+ camd-newcamd.c \
  process.c \
  tables.c \
  notify.c \
  tsdecrypt.c
-tsdecrypt_LIBS = -lcrypto -ldvbcsa -lpthread
+tsdecrypt_LIBS = -lcrypt -lcrypto -ldvbcsa -lpthread
 tsdecrypt_OBJS = $(FUNCS_LIB) $(TS_LIB) $(tsdecrypt_SRC:.c=.o)
 
 CLEAN_OBJS = tsdecrypt $(tsdecrypt_SRC:.c=.{o,d})
