@@ -26,5 +26,6 @@ uint8_t *init_4b(uint32_t val, uint8_t *b);
 uint8_t *init_4l(uint32_t val, uint8_t *b);
 uint8_t *init_2b(uint32_t val, uint8_t *b);
 void set_thread_name(char *thread_name);
+int decode_hex_string(char *hex, uint8_t *bin, int asc_len);
 
 #endif
